tests/ui/resolve/contract_special_functions.stderr
error: constructor function already declared
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL |     constructor() {}
   |     ---------------- previous declaration here
LL |     constructor() {}
   |     ^^^^^^^^^^^^^^^^

error: fallback function already declared
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL |     fallback() external {}
   |     ---------------------- previous declaration here
LL |     fallback() external {}
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: receive function already declared
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL |     receive() external payable {}
   |     ----------------------------- previous declaration here
LL |     receive() external payable {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: constructor function already declared
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL |     constructor() {}
   |     ---------------- previous declaration here
LL |     constructor() {}
   |     ^^^^^^^^^^^^^^^^

error: constructor function already declared
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL |     constructor() {}
   |     ---------------- previous declaration here
LL |     constructor() {}
LL |     constructor() {}
   |     ^^^^^^^^^^^^^^^^

error: fallback function already declared
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL |     fallback() external {}
   |     ---------------------- previous declaration here
LL |     fallback() external {}
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: fallback function already declared
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL |     fallback() external {}
   |     ---------------------- previous declaration here
LL |     fallback() external {}
LL |     fallback() external {}
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: receive function already declared
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL |     receive() external payable {}
   |     ----------------------------- previous declaration here
LL |     receive() external payable {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: receive function already declared
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL |     receive() external payable {}
   |     ----------------------------- previous declaration here
LL |     receive() external payable {}
LL |     receive() external payable {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

